force-app/main/default/objects/Invoice_Outstanding_Report__c/Invoice_Outstanding_Report__c.object-meta.xml
<CustomObject>
    <label>Invoice Outstanding Report</label>
    <nameField>
        <label>Invoice Outstanding Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Outstanding Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>