force-app/main/default/objects/Invoice_Outstanding_Report__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice Outstanding Reports</relationshipLabel>
    <relationshipName>Invoice_Outstanding_Reports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>