force-app/main/default/objects/Invoice_Outstanding_Report__c/fields/PIN_Code__c.field-meta.xml
<CustomField>
    <fullName>PIN_Code__c</fullName>
    <label>PIN Code</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>