force-app/main/default/objects/Invoice_Outstanding_Report__c/fields/Shipping_Date__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Date__c</fullName>
    <label>Shipping Note Date</label>
    <type>Date</type>
</CustomField>