force-app/main/default/objects/Invoice_Outstanding_Report__c/fields/Shipping_Number__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Number__c</fullName>
    <label>Shipping Note Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>