force-app/main/default/objects/Invoice_Outstanding_Report__c/fields/Trade_Name__c.field-meta.xml
<CustomField>
    <fullName>Trade_Name__c</fullName>
    <label>Trade Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>