force-app/main/default/objects/Invoice_Outstanding_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Customer__c</columns>
    <columns>Amount_Due__c</columns>
    <columns>Document_Number__c</columns>
    <columns>Document_Date__c</columns>
    <columns>Due_date__c</columns>
    <columns>Original_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>